add more pages and features

--- a/views/home_requester.ejs
+++ b/views/home_requester.ejs
@@ -3,9 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OFSER</title>
+    <link rel="stylesheet" href="style.css">
+    <title>OFSER | Home</title>
 </head>
 <body>
-    <p>Requester</p>
+    <div class="navbar">
+        <div class="navbar-1">
+            <p>OFSER</p>
+            <a href="/home-req">Home</a>
+            <a href="" id="my-request">My Request</a>
+        </div>
+        <div class="navbar-2">
+            <a href="#">Notification</a>
+            <p>Welcome, <span id="user-name"></span></p>
+            <a href="#">Profile</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <p id="content-title">Office Facility Services</p>
+        <div class="services">
+            <a href="/request/atk">
+                <div class="serv">
+                    <img src="#" alt="atk">
+                    <p>ATK/Barang Cetakan</p>
+                </div>
+            </a>
+            <a href="/request/consum">
+                <div class="serv">
+                    <img src="#" alt="consum">
+                    <p>Consumables</p>
+                </div>
+            </a>
+            <a href="/request/eventsupp">
+                <div class="serv">
+                    <img src="#" alt="eventsupp">
+                    <p>Event Support</p>
+                </div>
+            </a>
+            <a href="/request/expecourmail">
+                <div class="serv">
+                    <img src="#" alt="expecourmail">
+                    <p>Expedition, Courier & Mailing (Pengiriman)</p>
+                </div>
+            </a>
+            <a href="/request/kartunama">
+                <div class="serv">
+                    <img src="#" alt="kartunama">
+                    <p>Kartu Nama</p>
+                </div>
+            </a>
+            <a href="/request/konsumsi">
+                <div class="serv">
+                    <img src="#" alt="konsumsi">
+                    <p>Konsumsi</p>
+                </div>
+            </a>
+            <a href="/request/rtk">
+                <div class="serv">
+                    <img src="#" alt="rtk">
+                    <p>Rumah Tangga Kantor</p>
+                </div>
+            </a>
+            <a href="/request/workfurn">
+                <div class="serv">
+                    <img src="#" alt="workfurn">
+                    <p>Workstation & Furniture</p>
+                </div>
+            </a>
+        </div>
+    </div>
+        
+    <div class="footer">
+        <p>Kontak Admin</p>
+        <div>
+            <p>Whatsapp: +62-85263422340</p>
+            <p>Email: lyft0@protonmail.com</p>
+        </div>
+    </div>
+
+    <script src="/scripts/home/getCookies.js"></script>
 </body>
 </html>
