--- a/views/request_form/eventsupp_request.ejs
+++ b/views/request_form/eventsupp_request.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Request Event Support</h1>
     <form id="form-request">
-        <%- include('./partials/form_general_info.ejs') %> 
+        <%- include('../partials/form_general_info.ejs') %> 
 
         <p>Request Details</p>
         <label for="jumlah_peserta">Jumlah Peserta</label><input type="number" name="jumlah_peserta" id="jumlah_peserta"><br>
@@ -43,5 +43,6 @@
 
     <script src="/scripts/event_support/itemEventSupp.js"></script>
     <script src="/scripts/event_support/requestEventSupp.js"></script>
+    <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
 </html>
