--- a/views/request_form/workfurn_request.ejs
+++ b/views/request_form/workfurn_request.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Request Workstation & Furniture</h1>
     <form id="form-request">
-        <%- include('./partials/form_general_info.ejs') %> 
+        <%- include('../partials/form_general_info.ejs') %> 
 
         <p>Request Details</p>
         <label for="tgl_terima">Tanggal Pengambilan/Penerimaan</label><input type="date" name="tgl_terima" id="tgl_terima"><br>
@@ -49,5 +49,6 @@
     <script src="/scripts/workfurn/listWorkfurn.js"></script>
     <script src="/scripts/workfurn/itemWorkfurn.js"></script>
     <script src="/scripts/workfurn/requestWorkfurn.js"></script>
+    <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
 </html>
