--- a/views/home_fulfiller.ejs
+++ b/views/home_fulfiller.ejs
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OFSER</title>
+    <link rel="stylesheet" href="style.css">
+    <title>OFSER | Home</title>
 </head>
 <body>
-    <p>Fulfiller</p>
+    <div class="navbar">
+        <div class="navbar-1">
+            <p>OFSER</p>
+            <a href="/home-ful">Dashboard</a>
+            <a href="/ticket-console">Ticket Console</a>
+            <div class="search-group">
+                <input type="search" id="input-search" placeholder="Request ID"/>
+                <button type="button" id="btn-search">Search</button>   
+            </div>
+        </div>
+        <div class="navbar-2">
+            <a href="#">Notification</a>
+            <p>Welcome, <span id="user-name">Lucifer</span></p>
+            <a href="#">Profile</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <p id="content-title">Dashboard</p>
+    </div>
+        
+    <div class="footer">
+        <p>Kontak Admin</p>
+        <div>
+            <p>Whatsapp: +62-85263422340</p>
+            <p>Email: lyft0@protonmail.com</p>
+        </div>
+    </div>
+
+    <script src="/scripts/home/getCookies.js"></script>
 </body>
 </html>
