--- a/views/request_form/expecourmail_request.ejs
+++ b/views/request_form/expecourmail_request.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Request Expedition, Courier, and Mail</h1>
     <form id="form-request">
-        <%- include('./partials/form_general_info.ejs') %> 
+        <%- include('../partials/form_general_info.ejs') %> 
 
         <p>Request Details</p>
         <label for="jenis_kirim">Jenis Pengiriman</label><br>
@@ -36,5 +36,6 @@
     </form>
 
     <script src="/scripts/expecourmail/requestExpecourmail.js"></script>
+    <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
 </html>
