--- a/views/request_form/kartunama_request.ejs
+++ b/views/request_form/kartunama_request.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Request Kartu Nama</h1>
     <form id="form-request">
-        <%- include('./partials/form_general_info.ejs') %> 
+        <%- include('../partials/form_general_info.ejs') %> 
 
         <p>Request Details</p>
         <label for="tgl_terima">Tanggal Pengambilan/Penerimaan</label><input type="date" name="tgl_terima" id="tgl_terima"><br>
@@ -27,5 +27,6 @@
     </form>
 
     <script src="/scripts/kartunama/requestKartunama.js"></script>
+    <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
 </html>
