--- a/views/request_form/konsumsi_request.ejs
+++ b/views/request_form/konsumsi_request.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request Konsumsi</title>
@@ -10,7 +11,7 @@
 <body>
     <h1>Request Konsumsi</h1>
     <form id="form-request">
-        <%- include('./partials/form_general_info.ejs') %>
+        <%- include('../partials/form_general_info.ejs') %>
 
         <p>Request Details</p>
         <label for="kegiatan">Jenis Kegiatan</label><br>
@@ -114,6 +115,7 @@
     })
     </script>
     <script src="/scripts/konsumsi/requestKonsumsi.js"></script>
+    <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
 
 </html>
