--- a/views/partials/form_general_info.ejs
+++ b/views/partials/form_general_info.ejs
@@ -1,5 +1,10 @@
 <label for="req_by">Requested By</label><input type="text" name="req_by" id="req_by">
-<label for="req_for">Requested For</label><input type="text" name="req_for" id="req_for">
+<label for="req_for">Requested For</label>
+<select name="req_for" id="req_for">
+    <option selected disabled hidden>Pilih Requestee</option>
+</select>
+
+
 <p>General Information</p>
 <label for="no_pekerja">Nomor Pekerja</label><input type="text" name="no_pekerja" id="no_pekerja"><br>
 <label for="nama_req">Nama Requestor</label><input type="text" name="nama_req" id="nama_req"><br>
