--- a/views/ticket_console.ejs
+++ b/views/ticket_console.ejs
@@ -7,30 +7,11 @@
     <title>OFSER | Home</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-1">
-            <p>OFSER</p>
-            <a href="/home-req">Dashboard</a>
-            <a href="/ticket-console">Ticket Console</a>
-            <div class="search-group">
-                <input type="search" id="input-search" placeholder="Request ID"/>
-                <button type="button" id="btn-search">Search</button>   
-            </div>
-        </div>
-        <div class="navbar-2">
-            <a href="#">Notification</a>
-            <p>Welcome, <span id="user-name">Lucifer</span></p>
-            <a href="#">Profile</a>
-        </div>
-    </div>
+    <%- include('./partials/navbar_fulfiller.ejs') %>
 
     <div class="content">
         <p id="content-title">Ticket Console</p>
-
         <div class="console">
-            <div class="info-number">
-                
-            </div>
             <div class="table-ticket">
                 <table border="1" id="table-ticket">
                     <tr><th>Priority</th><th>Request ID</th><th>Work Order ID</th><th>Customer Name</th><th>Assignee</th><th>Summary</th><th>Status</th><th>Created At</th><th>Last Modified</th></tr>
@@ -54,17 +35,8 @@
                 </table>
             </div>
         </div>
-
-
     </div>
 
-
-
-
-
-
-
-        
     <div class="footer">
         <p>Kontak Admin</p>
         <div>
@@ -80,6 +52,8 @@
                 window.location.href = '/ticket-request/'+event.currentTarget.dataset.ticket
             })
         }
+        document.querySelector('#profile').href = `/profile/${id_user}`
+        document.querySelector('#profile_img').src = '/images/profile/'+cookies.image
     </script>
 </body>
 </html>
