--- a/public/style.css
+++ b/public/style.css
@@ -1,58 +1,164 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+/* // ---> Html body documents */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto';
+    /* font-family: 'Noto Sans', sans-serif; */
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
+/* // ---> Navbar */
 .navbar {
-    padding: 15px;
+    color: white;
+    padding: 9px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: rgb(170, 170, 170);
-}
+    background-color: #EB455F;
+    box-shadow: -1px 8px 18px -4px rgba(0,0,0,1);
+    -webkit-box-shadow: 1px 1px 12px -4px  rgba(0,0,0,1);
 
+}
 .navbar-1 {
     display: flex;
     flex-direction: row;
-    gap: 2em;
+    align-items: center;
+    gap: 2.5em;
+    margin-left: 12px;
+    font-weight: 500;
 }
-
+.navbar-1 > a {
+    color: #ffffff;
+    position: relative;
+    text-decoration: none;
+  }
+.navbar-1 > a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+.navbar-1 > a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
 .navbar-2 {
     display: flex;
     flex-direction: row;
-    gap: 2em;
+    align-items: center;
+    gap: 1.5em;
+    margin-right: 12px;
 }
 
+/* // ---> Footer */
+.footer {
+    color: white;
+    font-size: 0.9em;
+    display: flex;
+    background-color: #555555;
+    padding: 10px;
+    align-items: center;
+    gap: 20px;
+    align-content: flex-end;
+}
+
+/* // ---> Default Content */
 .content {
     display: flex;
     flex-direction: column;
     padding: 20px;
     flex: 1;
 }
-
 #content-title {
     margin-bottom: 20px;
     font-weight: bold;
 }
 
+/* // ---> Login Page */
+.content-login {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/images/background.jpg');
+}
+.wrapper-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    border-radius: 10px;
+    padding: 50px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+.wrapper-login:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+#login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+#login > div > input {
+    background-color: #eee;
+    width: 300px;
+    padding: 15px;
+    border: none;
+    border-radius: 8px;
+}
+#login > div > input:focus {
+    border: 2px solid rgb(75, 204, 255);
+}
+#btn-login {
+    padding: 16px;
+    color: white;
+    margin-top: 10px;
+    font-weight:600;
+    font-size: 1em;
+    width: 300px;
+    background-color: #3498db;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+#btn-login:hover {
+    background-color: #87b9da;
+}
+
+/* // ---> Home Requester Page */
 .services {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
 }
-
+.service {
+    text-decoration: none;
+    font-weight: bold;
+}
 .serv {
     padding: 20px;
     display: flex;
@@ -63,50 +169,35 @@ body {
     width: 300px;
     height: 120px;
     border-radius: 10px;
-}
-
-.serv:hover {
-    background-color: rgb(115, 115, 115);
+    background: #efefef;
+    border: none;
+    color: #444;
+    outline: none;
     cursor: pointer;
+    transition: .2s ease-in-out;
+    box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
+        -6px -6px 10px rgba(255, 255, 255, .5),
+        6px 6px 8px rgba(255, 255, 255, .075),
+        6px 6px 10px rgba(0, 0, 0, .15);
+}
+.serv:hover {
+    box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+        -2px -2px 4px rgba(255, 255, 255, .4),
+        2px 2px 2px rgba(255, 255, 255, .05),
+        2px 2px 4px rgba(0, 0, 0, .1);
+}
+.serv:active {
+    box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
+        inset -2px -2px 4px rgba(255, 255, 255, .5),
+        inset 2px 2px 2px rgba(255, 255, 255, .075),
+        inset 2px 2px 4px rgba(0, 0, 0, .15);
 }
 
-.footer {
-    font-size: 0.9em;
-    display: flex;
-    background-color: rgb(182, 182, 182);
-    padding: 10px;
-    align-items: center;
-    gap: 30px;
-    align-content: flex-end;
-}
-
-.content-login {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-}
-
-.wrapper-login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: rgb(222, 222, 222);
-    width: 400px;
-    height: 350px;
-    border-radius: 10px;
-}
-
-/* My Request */
+/* // ---> My Request Page */
 .request-tab {
     display: flex;
     flex-direction: row;
-
 }
-
 .request-profile {
     background-color: rgb(255, 255, 255);
     width: 300px;
@@ -118,17 +209,14 @@ body {
     padding: 20px;
     margin-right: 40px;
 }
-
 .image-canvas {
     width: 200px;
     height: 200px;
-    border: 1px solid black;
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 #request-name {
     font-size: 1.3em;
     font-weight: bold;
@@ -137,31 +225,26 @@ body {
     text-align: center;
     margin-bottom: 20px;
 }
-
 #info_ {
     font-size: 1.1em;
     margin-bottom: 20px;
 }
-
 #request-email {
     font-size: 0.8em;
 }
-
 .request-list {
-    background-color: rgb(149, 149, 149);
+    background-color: #75a0ff;
     width: 870px;
     height: 480px;
     border-radius: 20px;
     padding: 30px;
 }
-
-/* ticket bubble */
+/* // ---> Ticket Bubble */
 .ticket {
     display: flex;
     flex-direction: row;
     margin-bottom: 6px;
 }
-
 #ticket-date {
     color: white;
     background-color: black;
@@ -172,7 +255,6 @@ body {
     border-radius: 7px;
     margin-right: 15px;
 }
-
 .line-dot {
     display: flex;
     flex-direction: column;
@@ -181,26 +263,22 @@ body {
     margin-right: 20px;
     gap: 15px;
 }
-
 .line {
-    width: 3px;
+    width: 4px;
     height: 120px;
     background-color: rgb(49, 49, 49);
-    border-radius: 100px;
+    border-radius: 200px;
 }
-
 .ticket-list {
-    background-color: grey;
+    background-color: #b5c0f7;
     height: 420px;
     overflow-x: none;
     overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
 }
-
 .ticket-bubble {
     color: #212121;
-    background: rgba(255, 255, 255, 0.84);
     padding: 20px;
     border-radius: 3px 20px 20px 20px;
     text-align: left;
@@ -214,46 +292,65 @@ body {
     display: flex;
     flex-direction: row;
     cursor: pointer;
+    background: #efefef;
+    border: none;
+    color: #444;
+    outline: none;
+    transition: .2s ease-in-out;
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, .15),
+        -6px -6px 10px rgba(255, 255, 255, .5),
+        6px 6px 8px rgba(255, 255, 255, .075),
+        6px 6px 10px rgba(0, 0, 0, .15);
 }
-
 .ticket-bubble:hover {
-    background-color: rgba(215, 215, 215, 0.84);
+    box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+        -2px -2px 4px rgba(255, 255, 255, .4),
+        2px 2px 2px rgba(255, 255, 255, .05),
+        2px 2px 4px rgba(0, 0, 0, .1);
 }
-
+.ticket-bubble:active {
+    box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
+        inset -2px -2px 4px rgba(255, 255, 255, .5),
+        inset 2px 2px 2px rgba(255, 255, 255, .075),
+        inset 2px 2px 4px rgba(0, 0, 0, .15);
+}
 .req-id {
     font-size: 12px;
     font-weight: 500;
 }
-
 #line-bubble {
     background-color: black;
     height: 1px;
     width: 320px;
     margin: 10px 0 10px 0;
 }
-
 #ticket-image {
     width: 50px;
     height: 50px;
     border: 1px solid black;
     margin-right: 20px;
 }
-
 .status {
     font-size: 0.9em;
 }
-
 #ticket-type {
     font-size: 1.1em;
     font-weight: bold;
 }
-
-/* modal content */
+#profile-img {
+    border-radius: 10px;
+    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    transition: 0.3s;
+}
+#profile-img:hover {
+    transform: scale(1.1);
+}
+/* //---> Modal content */
 .modal {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 40px;
     left: 0;
     top: 0;
     width: 100%;
@@ -274,7 +371,8 @@ body {
     background-color: #fefefe;
     margin: auto;
     padding: 0;
-    width: 720px;
+    width: 800px;
+    height: 600px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -286,6 +384,7 @@ body {
         top: -300px;
         opacity: 0
     }
+
     to {
         top: 0;
         opacity: 1
@@ -296,6 +395,7 @@ body {
         top: -300px;
         opacity: 0
     }
+
     to {
         top: 0;
         opacity: 1
@@ -312,13 +412,12 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
-
 .modal-body {
     display: flex;
     flex-direction: column;
 }
 .info-1 {
-    background-color: grey;
+    background-color: #EFEFEF;
     display: flex;
     flex-direction: row;
     padding: 30px 0 30px 30px;
@@ -348,7 +447,7 @@ body {
 }
 .tab-1-info-2 {
     width: 35%;
-    height: 290px;
+    height: 400px;
     margin-right: 10px;
     padding: 5px;
 }
@@ -356,6 +455,9 @@ body {
     width: 65%;
     border-left: 1px solid black;
     padding-left: 30px;
+    height: 400px;
+    overflow-x: none;
+    overflow-y: auto;
 }
 .req-detail-button {
     text-align: start;
@@ -364,7 +466,7 @@ body {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     background-color: #ffffff;
-    width: 390px;
+    width: 440px;
     padding: 10px;
     cursor: pointer;
 }
@@ -387,14 +489,34 @@ body {
     margin-top: 10px;
     height: 240px;
     padding: 0;
-    width: 390px;
+    width: 440px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.1s ease-out;
     background-color: #cfcfcf;
     border-radius: 10px;
 }
-
+.req-detail-text-2 {
+    font-size: 0.83em;
+    margin-top: 10px;
+    height: 245px;
+    padding: 0;
+    width: 440px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.1s ease-out;
+    background-color: #cfcfcf;
+    border-radius: 10px;
+}
+#activity-note-request {
+    margin-bottom: 10px;
+}
+.activity-list-request {
+    height: 170px;
+    overflow-x: none;
+    overflow-y: auto;
+    padding-bottom: 20px;
+}
 .btn-info-2 {
     display: flex;
     flex-direction: row-reverse;
@@ -402,19 +524,42 @@ body {
     justify-content: center;
     margin-top: 10px;
 }
-.btn-print, .btn-cancel, .btn-workorder {
+.btn-print,
+.btn-workorder {
     padding: 10px;
     width: 140px;
     border-radius: 10px;
     margin-left: 10px;
+    color: white;
+    background-color: #64CCC5;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
+.btn-print:hover,
+.btn-workorder:hover{
+    background-color: #6b9e9b;
+}
+.btn-cancel {
+    padding: 10px;
+    width: 140px;
+    border-radius: 10px;
+    margin-left: 10px;
+    color: white;
+    background-color: #ec3c3c;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
+.btn-cancel:hover{
+    background-color: #9a2d2d;
 }
 
 /* Ticket request page */
-#table-ticket > #tbody > tr:hover {
+#table-ticket>#tbody>tr:hover {
     background-color: #757575;
     cursor: pointer;
 }
-
 .tab-group-req {
     display: flex;
     flex-direction: row;
@@ -433,15 +578,16 @@ body {
 .req-detail {
     margin-top: 13px;
     height: 233px;
-    border-radius: 10px;background-color: beige; padding: 15px;
+    border-radius: 10px;
+    background-color: beige;
+    padding: 15px;
     font-size: 0.93em;
 }
 .user-info {
     display: flex;
     flex-direction: row;
     gap: 20px;
-}   
-
+}
 .activity-tab {
     background-color: #757575;
     display: flex;
@@ -463,7 +609,7 @@ body {
     width: 370px;
 }
 .msg-detail {
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: center;
     width: 230px;
@@ -479,37 +625,187 @@ body {
     align-items: center;
     gap: 10px;
 }
-
 /* Sliding SLA */
 input[type="range"] {
-    /* removing default appearance */
     -webkit-appearance: none;
-    appearance: none; 
-    /* creating a custom design */
+    appearance: none;
     width: 370px;
     cursor: pointer;
     outline: none;
-    /*  slider progress trick  */
     overflow: hidden;
     border-radius: 16px;
-  }
-  /* Track: webkit browsers */
-  input[type="range"]::-webkit-slider-runnable-track {
+}
+input[type="range"]::-webkit-slider-runnable-track {
     height: 15px;
     background: #ccc;
     border-radius: 16px;
-  }
-  /* Thumb: webkit */
-  input[type="range"]::-webkit-slider-thumb {
-    /* removing default appearance */
+}
+input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    appearance: none; 
-    /* creating a custom design */
+    appearance: none;
     height: 15px;
     width: 15px;
     background-color: #fff;
     border-radius: 50%;
     border: 2px solid rgb(0, 171, 28);
-    /*  slider progress trick  */
     box-shadow: -407px 0 0 400px rgba(31, 205, 0, 0.7);
-  }
+}
+
+/* //---> My Profiles */
+#form-profile {
+    display: flex;
+    flex-direction: column;
+}
+.tab-profiles {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+.tab-profiles > * > input {
+    width: 250px;
+    height: 35px;
+    padding: 10px;
+    font-size: 0.85em;
+    border-radius: 8px;
+}
+.tab-profiles > * > p {
+    font-size: 0.95em;
+    margin-bottom: 6px;
+}
+.tab-profile-1 {
+    background-color: #EEEEEE;
+    padding: 30px;
+    border-radius: 10px;
+}
+.tab-profile-2 {
+    display: flex;
+    flex-direction: column;
+    background-color: #EEEEEE;
+    padding: 30px;
+    border-radius: 10px;
+}
+.tab-profile-2 > button {
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 0.9em;
+    font-weight: bold;
+    color: white;
+    border:none;
+    cursor: pointer;
+}
+.tab-profile-1, .tab-profile-2 {
+    position: relative;
+}
+.tab-profile-1, .tab-profile-2 {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.tab-profile-1:hover, .tab-profile-2:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+#btn-update {
+    background-color: rgb(5, 135, 217);
+}
+#btn-update:hover {
+    background-color: rgb(106, 180, 225);
+}
+#btn-logout {
+    background-color: rgb(210, 0, 42);
+}
+#btn-logout:hover {
+    background-color: rgb(213, 58, 89);
+}
+
+/* //---> loading spin */
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 70px;
+    height: 70px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* //---> Visualize data */
+.visual-data {
+    display: flex;
+    flex-direction: row;
+    gap: 80px;
+    padding: 5px;
+}
+.data-num {
+    font-size: 0.95em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #f7f7f7;
+    gap: 25px;
+    width: fit-content;
+    padding: 30px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+    margin-left: 80px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.data-num > * {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+.data-num:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.ticket-num {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+.search-group {
+    display: flex;
+    flex-direction: row;
+}
+#input-search {
+    height: 28px;
+}
+#input-search {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 10px;
+    border: none;
+    margin-right: 3px;
+}
+#btn-search {
+    height: 28px;
+    display: flex;
+    align-items: center;
+    padding: 8px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(219, 219, 219);
+}
+#btn-search:hover {
+    background-color: rgb(169, 169, 169);
+}
+
+/* //---> Ticket console */
+.console {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
